<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".activities.MatchActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content">

            <TextView android:gravity="center" android:id="@+id/tv_team_a" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="@dimen/medium_text" android:text="@string/filler"/>
            <Button android:id="@+id/btn_2_a" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/two_points" android:textSize="@dimen/text_big"/>
            <Button android:id="@+id/btn_3_a" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/three_points" android:textSize="@dimen/text_big"/>
            <TextView android:id="@+id/score_a" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filler" android:textSize="@dimen/medium_text"/>

        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content">

            <TextView android:gravity="center" android:id="@+id/tv_team_b" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/filler" android:textSize="@dimen/medium_text"/>
            <Button android:id="@+id/btn_2_b" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/two_points" android:textSize="@dimen/text_big"/>
            <Button android:id="@+id/btn_3_b" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/three_points" android:textSize="@dimen/text_big"/>
        <TextView android:id="@+id/score_b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filler" android:textSize="@dimen/medium_text"/>
        </LinearLayout>



    </LinearLayout>
    <Button android:id="@+id/end_match" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:text="FINISH" android:textSize="@dimen/text_big"/>

</LinearLayout>